Fix text overflow on sidebar group chat item not adding ellipsis

--- a/app/(main)/components/Sidebar/components/GroupChatItem/styles.module.scss
+++ b/app/(main)/components/Sidebar/components/GroupChatItem/styles.module.scss
@@ -15,7 +15,6 @@
   border: none;
   border-radius: var(--br);
   cursor: pointer;
-  overflow: hidden;
 
   &:hover {
     background-color: var(--clr-hover);
@@ -42,15 +41,28 @@
 
 .info {
   display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  width: 100%;
+  min-width: 0;
+}
+
+.names {
+  display: flex;
+  max-width: 100%;
   flex-direction: column;
   align-items: flex-start;
+  min-width: 0;
+  overflow: hidden;
 }
 
 .display-name {
   line-height: 1;
+  min-width: 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .member-count {
